syntax = "proto3";

import "wrappers.proto";
import "uint128.proto";

message Account {
    Uint128 amount = 1;
    Uint128 staked = 2;
    bytes code_hash = 3;
    uint64 storage_usage = 4;
    uint64 storage_paid_at = 5;
}
