syntax = "proto3";

import "uint128.proto";

message GroupSignature {
    string signature = 1;
    repeated bool authority_mask = 2;
}

message MerkleNode {
    bytes hash = 1;
    // Direction encoded as bool. true -> Left, false -> right
    bool direction = 2;
}

message ValidatorStake {
    string account_id = 1;
    string public_key = 2;
    Uint128 amount = 4;
}
